Add Maven Profiles for Jenkins builds